--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <main class="hero">
+    <main class="img">
         <section class="images">
             <img src="img/plato1.png" alt="Food 1">
             <img src="img/plato2.png" alt="Food 2">
